# dota2jpwikibot

./: .gitignore  README.md  pyproject.toml
src/dota2jpwikibot/: gamefile.py  hero.py  localization.py  main.py  template.py  util.py
templates/: hero.j2
