[project]
name = "dota2jpwikibot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aoisensi", email = "me@aoisensi.info" }
]
dependencies = [
    "vpk>=1.4.0",
    "vdf>=3.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
